# rwkv-rlhf

./: CODE_INDEX.md  README.md  README_EXPORT.md  antidoom_rwkv.py  gsm8k_progress_advantage_eval.py  run_deepmath_gsm8k_grpo20.sh  run_deepmath_resume_300_to500.sh  run_deepmath_resume_to300.sh  run_gsm8k_progress_advantage_paper.sh  run_standard_grpo_neg1_lr2e7_200.sh  run_standard_grpo_neg1_lr5e7_500.sh  split_deepmath.py  train_rl_deepmath_resume.py  train_rl_standard_grpo.py
autodl-tmp_code/Albatross_ref_tmp/faster4_2605_cpp/: CMakeLists.txt  README.md
autodl-tmp_code/Albatross_ref_tmp/faster4_2605_cpp/cuda/: rwkv7_fast_v4_kernels.cuh  rwkv7_v3a_ops.cu
autodl-tmp_code/Albatross_ref_tmp/faster4_2605_cpp/include/: status.hpp
autodl-tmp_code/Albatross_ref_tmp/faster4_2605_cpp/src/: pth_archive.cpp  pth_tensor.cpp
autodl-tmp_code/helicopter/: AGENTS.example.md  CONTRIBUTING.md  README.md  build_vllm_cuda.sh  fetch_remaining_submodules.sh  pyproject.toml
autodl-tmp_code/helicopter/.github/: PULL_REQUEST_TEMPLATE.md
autodl-tmp_code/helicopter/.github/workflows/: dco.yml  tests.yml
autodl-tmp_code/helicopter/configs/: example.toml
autodl-tmp_code/helicopter/configs/local/: seetacloud_g1g_gsm8k_5090_smoke.toml  seetacloud_g1g_gsm8k_official.toml
autodl-tmp_code/helicopter/scripts/: install_local.sh  install_remote.sh
autodl-tmp_code/helicopter/src/cli/helicopter_cli/: __init__.py  __main__.py  commands.py  config.py  env.py  paths.py  runner.py
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/: CMakeLists.txt  setup.py
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/.deps/cutlass-subbuild/: CMakeCache.txt  CMakeLists.txt
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/.deps/flashmla-subbuild/: CMakeCache.txt  CMakeLists.txt
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/.deps/fmha_sm100-subbuild/: CMakeCache.txt  CMakeLists.txt
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/.deps/triton_kernels-subbuild/: CMakeCache.txt  CMakeLists.txt
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/.deps/vllm-flash-attn-subbuild/: CMakeCache.txt  CMakeLists.txt
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/.github/workflows/: rebase-rwkv.yml
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/tests/benchmarks/: test_rwkv7_faster3a_benchmark.py
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/tests/kernels/: test_rwkv7_ops.py
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/vllm/: _version.py
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/vllm/utils/: __init__.py
autodl-tmp_code/helicopter/src/infer/vllm-rwkv/vllm/vllm_flash_attn/: __init__.py
autodl-tmp_code/helicopter/src/train/rwkv-lm/: demo-training-prepare.sh  demo-training-run.sh  train.py
autodl-tmp_code/helicopter/src/train/rwkv-lm/cuda/: rwkv7_clampw128_v2.cpp  rwkv7_clampw128_v2.cu  rwkv7_clampw_v3_for_h100.cu
autodl-tmp_code/helicopter/src/train/rwkv-lm/src/: model.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/.github/workflows/: rebase-rwkv.yml
autodl-tmp_code/helicopter/src/train/verl-rwkv/analysis/: rwkv_grpo_vllm_latest_validation.md  rwkv_logprob_probe.py  vllm_rwkv_async_probe.py  vllm_rwkv_decode_probe.py  vllm_rwkv_ipc_update_probe.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/examples/rwkv_trainer/: math_dapo_reward.py  math_verify_reward.py  run_rwkv7_grpo_vllm.sh
autodl-tmp_code/helicopter/src/train/verl-rwkv/tests/rwkv/: README.md  conftest.py  test_loss_bridge_uses_verl_loss_on_cpu.py  test_native_imports_on_cpu.py  test_native_templates_on_cpu.py  test_rwkv_lm_args_env_on_cpu.py  test_rwkv_lm_batch_bridge_on_cpu.py  test_rwkv_lm_checkpoint_on_cpu.py  test_rwkv_lm_engine_loss_contract_on_cpu.py  test_rwkv_lm_native_runner_on_cpu.py  test_tokenizer_bridge_on_cpu.py  test_vllm_rollout_model_config_on_cpu.py  test_weight_bridge_on_cpu.py  test_weight_mapping_on_cpu.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/tests/trainer/ppo/: test_core_algos_on_cpu.py  test_metric_utils_on_cpu.py  (+1 more)
autodl-tmp_code/helicopter/src/train/verl-rwkv/tests/utils/: test_attention_utils_on_cpu.py  test_vllm_patch.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/tests/workers/: test_engine_worker_metric_aggregation_on_cpu.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/verl/trainer/: main_ppo_v0.py  tokenizer.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/verl/utils/: attention_utils.py
autodl-tmp_code/helicopter/src/train/verl-rwkv/verl/workers/: engine_workers.py
autodl-tmp_code/helicopter/tests/: test_cli.py
autodl-tmp_code/rlm_official_tmp/training/: README.md  pyproject.toml
autodl-tmp_code/rlm_official_tmp/training/configs/: rlm-qwen3-30b-example.toml
autodl-tmp_code/rlm_official_tmp/training/environments/oolong/: README.md  pyproject.toml
autodl-tmp_code/rlm_official_tmp/training/environments/oolong/oolong/: __init__.py  env.py
autodl-tmp_code/rlm_official_tmp/training/src/rlm_train/: __init__.py  env.py  proxy.py  rubric.py  worker.py
autodl-tmp_code/rlm_official_tmp/training/src/rlm_train/repl/: __init__.py  base.py  subprocess.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/: README.md  README_zh.md  RLVR.py  RLVR_statetuning.py  main.py  pyproject.toml  requirements.txt  train_sh.sh
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/.ipynb_checkpoints/: train-checkpoint.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/output_neko/: train_log.txt
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/: peft_loading.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/dataset/: binidx.py  dataset.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/lightning_train/: light_rwkv.py  trainer.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/operator/: rwkvop.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/optimizer_config/: config.json
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/rwkv5/: att.py  ffn.py  model.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/rwkv6/: att.py  ffn.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/rwkvt/rwkv7/: att.py  ffn.py  model.py
root_RWKV-LM/RWKV-PEFT-main/RWKV-PEFT-main/scripts/: lora.sh  miss.sh  state tuning.sh
(+833 files in other folders)
