[project]
name = "rlm-train"
version = "0.1.0"
description = "Verifiers-compatible training harness for Recursive Language Models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "rlms>=0.1.1",
    "verifiers>=0.1.11.dev0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.14"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_train"]

[tool.uv.sources]
rlms = { path = "../", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
