[project]
name = "rwkv-peft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.48.1",
    "datasets>=4.3.0",
    "deepspeed>=0.18.1",
    "einops>=0.8.1",
    "jsonlines>=4.0.0",
    "lightning>=2.0.0",
    "peft>=0.17.1",
    "rwkv>=0.8.30",
    "rwkv-fla>=0.7.202508221413",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "triton>=3.5.0",
    "wandb>=0.22.3",
]
